--- a/qutebrowser/qutebrowser.conf
+++ b/qutebrowser/qutebrowser.conf
@@ -39,7 +39,7 @@ ignore-case = smart
 # startpage (List of String):
 #     The default page(s) to open at the start, separated by commas.
 #     Default: https://start.duckduckgo.com
-startpage = https://google.com
+startpage = https://google.co.uk/
 
 # yank-ignored-url-parameters (List of String):
 #     The URL parameters to strip with :yank url, separated by commas.
@@ -1040,7 +1040,7 @@ hide-unmatched-rapid-hints = true
 # replaced by the search term, use `{{` and `}}` for literal `{`/`}`
 # signs.
 [searchengines]
-DEFAULT = https://google.com/?q={}
+DEFAULT = https://google.co.uk/?q={}
 
 
 # Aliases for commands.
