--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -360,13 +360,13 @@ map [     move_parent -1
 map }     traverse
 map )     jump_non
 
-map gg cd ~
-map gh cd ~/Dropbox/hk171
-map gc cd ~/Dropbox/hk171/congnghe
-map gp cd ~/Dropbox/hk171/ppl
-map gn cd ~/Dropbox/hk171/network
-map gd cd ~/Dropbox/hk171/database
-map gm cd ~/Dropbox/hk171/MCDL
+map cg cd ~
+map ch cd ~/Dropbox/hk171
+map cc cd ~/Dropbox/hk171/congnghe
+map cp cd ~/Dropbox/hk171/ppl
+map cn cd ~/Dropbox/hk171/network
+map cd cd ~/Dropbox/hk171/database
+map cm cd ~/Dropbox/hk171/MCDL
 # map gl cd -r .
 # map gL cd -r %f
 # map go cd /opt
