--- a/i3/config
+++ b/i3/config
@@ -20,8 +20,16 @@ font pango:LiberationMono Sans Mono, Icons 11
 exec --no-startup-id nm-applet
 exec_always --no-startup-id feh --bg-scale ~/.config/wall.png
 
+exec_always 	bash ~/.keyboard 
 
-exec_always 			exec bash ~/.config/polybar/launch.sh
+bar {
+        font pango:Inconsolata 8
+        position top
+        tray_output none
+	status_command i3status
+}
+
+# exec_always 			exec bash ~/.config/polybar/launch.sh
 
 
 bindsym $mod+Return 		exec $term
@@ -43,7 +51,7 @@ bindsym $mod+q		kill
 bindsym $mod+w		exec qutebrowser
 bindsym $mod+Shift+w	exec --no-startup-id $browser
 
-#bindsym $mod+e		exec $term -e mutt
+bindsym $mod+e		exec evince
 #bindsym $mod+Shift+e	exec $mail
 
 bindsym $mod+r 		exec $term -e ranger
