--- a/polybar/config
+++ b/polybar/config
@@ -1,181 +1,318 @@
-[colors]
-background = #2e3440
-foreground = #f3f4f5
-alert = #d08770
-volume-min = #a3be8c
-volume-med = #ebcb8b
-volume-max = #bf616a
-; =======================
+;=====================================================
+;
+;   To learn more about how to configure Lemonbuddy
+;   go to https://github.com/jaagr/lemonbuddy
+;
+;   The README contains a lot of information
+;
+;=====================================================
 
-[bar/default]
+[settings]
+; Limit the amount of events sent to lemonbar within a set timeframe:
+; - "Allow <throttle_limit> updates within <throttle_ms> of time"
+; Default values:
+;throttle_limit = 5
+;throttle_ms = 50
+
+[bar/top]
+monitor = LVDS1
+bottom = false
+dock = true
+
 width = 100%
 height = 16
-radius = 0
-fixed-center = false
-bottom = false
 
-background = ${colors.background}
-foreground = ${colors.foreground}
+offset-x = 5
 
-module-margin-left = 1
+offset-y = 5
+
+background = #00000000
+foreground = #ccffffff
+;linecolor = #aaff0000
+
+spacing = 5
+lineheight = 0
+
+;separator = |
+
+;locale = en_US.UTF-8
+
+padding-left = 0
+padding-right = 0
+module-margin-left = 0
 module-margin-right = 1
 
-font-0 = Input Mono:style=Regular:size=10;4
-font-1 = FontAwesome:style=Regular:size=10;4
+font-0 = Iosevka:weight=medium:pixelsize=14;0
+font-1 = Iosevka:italic:weight=medium:pixelsize=14;0
+font-2 = Iosevka:weight=bold:pixelsize=14;0
 
-modules-left = workspace
-modules-center = i3
-modules-right = eth memory cpu volume date powermenu
+modules-left = down-speed up-speed
+modules-center = bspwm
+modules-right = backlight battery
 
-tray-position = right
-tray-padding = 4
-tray-transparent = true
+[bar/bottom]
+monitor = eDP1
+bottom = false
+dock = true
 
-[module/workspaces]
-type = internal/xworkspaces
-enable-click = true
-enable-scroll = true
-Additional formatting
+width = 1356
+height = 24
 
-icon-0 = web;
-icon-1 = term;
-icon-2 = chat;
-icon-3 = code;
-icon-4 = music;
-icon-default = 
+offset-x = 5
+offset-y = 741
 
-label-monitor = %name%
-format =
+background = #00000000
+foreground = #ccffffff
+;linecolor = #aaff0000
 
-label-focused = %icon%
-label-focused-background = #88000000
-label-focused-underline= #ddd
-label-focused-padding = 4
+spacing = 5
+lineheight = 0
 
-label-occupied = %icon%
-label-occupied-padding = 4
+;separator = |
 
-label-urgent = %icon%
-label-urgent-padding = 4
+;locale = en_US.UTF-8
 
-label-empty = %icon%
-label-empty-foreground = #44ffffff
-label-empty-padding = 4
+padding-left = 0
+padding-right = 0
+module-margin-left = 0
+module-margin-right = 1
 
+font-0 = Iosevka:weight=medium:pixelsize=14;0
+font-1 = Iosevka:italic:weight=medium:pixelsize=14;0
+font-2 = Iosevka:weight=bold:pixelsize=14;0
 
-[module/i3]
-type = internal/i3
-format = <label-state> <label-mode>
-index-sort = true
-wrapping-scroll = false
+modules-left = clock
+modules-right = mpd
 
-ws-icon-0 = 1;a
-ws-icon-1 = 2;b
-ws-icon-2 = 3;c
-
-; Only show workspaces on the same output as the bar
-;pin-workspaces = true
-
-label-mode-padding = 2
-label-mode-foreground = #000
-label-mode-background = ${colors.primary}
-
-; focused = Active workspace on focused monitor
-label-focused = %index% %icon%
-label-focused-background = ${module/bspwm.label-focused-background}
-label-focused-underline = ${module/bspwm.label-focused-underline}
-label-focused-padding = ${module/bspwm.label-focused-padding}
-
-; unfocused = Inactive workspace on any monitor
-label-unfocused = %index% %icon%
-label-unfocused-padding = ${module/bspwm.label-occupied-padding}
-
-; visible = Active workspace on unfocused monitor
-label-visible = %index% %icon%
-label-visible-background = ${self.label-focused-background}
-label-visible-underline = ${self.label-focused-underline}
-label-visible-padding = ${self.label-focused-padding}
-
-; urgent = Workspace with urgency hint set
-label-urgent = %index% %icon%
-label-urgent-background = ${module/bspwm.label-urgent-background}
-label-urgent-padding = ${module/bspwm.label-urgent-padding}
-
-[module/cpu]
-type = internal/cpu
-interval = 5
-format = " <label>"
-format-foreground = ${colors.foreground}
-label = %percentage%%
-
-[module/memory]
-type = internal/memory
-interval = 5
-format = " <label>"
-format-foreground = ${colors.foreground}
-label = %percentage_used%%
-
-[module/eth]
-type = internal/network
-interface = enp3s0
-interval = 5
-
-label-connected = "%downspeed% %upspeed%"
-
-format-disconnected = <label-disconnected>
-label-disconnected = " NETWORK DOWN"
-label-disconnected-foreground = ${colors.alert}
-
-[module/date]
+[module/clock]
 type = internal/date
-interval = 1
-
-date = "%m/%d"
-date-alt = "%%m/%d"
-
-time = %H:%M
-time-alt = %H:%M:%S
-
-format = " <label>"
-format-foreground = ${colors.foreground}
-
-label = %date% %time%
+date = %b %d %Y / %H:%M:%S
+format-padding = 1
+format-background = #aa000000
 
 [module/volume]
 type = internal/volume
+speaker_mixer = Speaker
+headphone_mixer = Headphone
+headphone_control_numid = 9
 
-format-volume = <label-volume> <bar-volume>
-label-volume = ""
-label-volume-foreground = ${root.foreground}
-label-muted = " "
+format-volume-padding = 1
+format-muted-padding = 1
+format-volume-background = #aa000000
+format-muted-foreground = #000000
+format-muted-background = #ccc7c7c7
 
-bar-volume-width = 5
-bar-volume-foreground-0 = ${colors.volume-min}
-bar-volume-foreground-1 = ${colors.volume-min}
-bar-volume-foreground-2 = ${colors.volume-min}
-bar-volume-foreground-3 = ${colors.volume-med}
-bar-volume-foreground-4 = ${colors.volume-med}
-bar-volume-foreground-5 = ${colors.volume-max}
-bar-volume-foreground-6 = ${colors.volume-max}
-bar-volume-gradient = false
-bar-volume-indicator = │
-bar-volume-indicator-font = 2
-bar-volume-indicator-foreground = #ff
-bar-volume-fill = ─
-bar-volume-fill-font = 2
-bar-volume-empty = ─
-bar-volume-empty-font = 2
-bar-volume-empty-foreground =
+label-volume = vol %percentage%
+label-muted = muted
 
-[settings]
-screenchange-reload = true
-;compositing-background = xor
-;compositing-background = screen
-;compositing-foreground = source
-;compositing-border = over
+[module/bspwm]
+type = internal/bspwm
 
-[global/wm]
-margin-top = 5
-margin-bottom = 5
+; Available tags:
+;   <label-state> (default) - gets replaced with <label-(active|urgent|occupied|empty)>
+;   <label-mode> - gets replaced with <label-(monocle|tiled|fullscreen|floating|locked|sticky|private)>
+format = <label-state> <label-mode>
 
-; vim:ft=dosini
+; If any of these are defined, the workspace/mode colors will get overridden
+; with these values if the monitor is out of focus
+;label-dimmed-foreground = #555
+;label-dimmed-background = ${root.background}
+label-dimmed-underline = ${root.background}
+
+; Available tokens:
+;   %name%
+;   %icon%
+;   %index%
+; Default- %icon%  %name%
+label-active = %name%
+label-active-foreground = #000000
+label-active-background = #ccc7c7c7
+label-active-underline = #fba922
+label-active-font = 1
+label-active-padding = 1
+
+; Available tokens:
+;   %name%
+;   %icon%
+;   %index%
+; Default- %icon%  %name%
+label-occupied = %name%
+label-occupied-underline = #555555
+label-occupied-background = #aa000000
+label-occupied-font = 1
+label-occupied-padding = 1
+
+; Available tokens:
+;   %name%
+;   %icon%
+;   %index%
+; Default- %icon%  %name%
+label-urgent = %name%
+label-urgent-foreground = #440000
+label-urgent-background = #aa000000
+label-urgent-underline = #9b0a20
+label-urgent-font = 1
+label-urgent-padding = 1
+
+; Available tokens:
+;   %name%
+;   %icon%
+;   %index%
+; Default- %icon%  %name%
+label-empty = %name%
+label-empty-foreground = #77ffffff
+label-empty-background = #aa000000
+label-empty-font = 1
+label-empty-padding = 1
+
+; Available tokens:
+;   None
+label-monocle = 
+label-monocle-underline = ${module/bspwm.label-active-underline}
+label-monocle-padding = 1
+;label-tiled = 
+;label-fullscreen = 
+;label-floating = 
+label-locked = 
+label-locked-foreground = #bd2c40
+label-locked-underline = ${module/bspwm.label-monocle-underline}
+label-locked-padding = ${module/bspwm.label-monocle-padding}
+label-sticky = 
+label-sticky-foreground = #fba922
+label-sticky-underline = ${module/bspwm.label-monocle-underline}
+label-sticky-padding = ${module/bspwm.label-monocle-padding}
+label-private = 
+label-private-foreground = #bd2c40
+label-private-underline = ${module/bspwm.label-monocle-underline}
+label-private-padding = ${module/bspwm.label-monocle-padding}
+
+[module/battery]
+type = internal/battery
+
+; This is useful in case the battery never reports 100% charge
+full_at = 99
+
+; Use the following command to list batteries and adapters:
+; $ ls -1 /sys/class/power_supply/
+battery = BAT0
+adapter = AC
+
+; Seconds between reading battery capacity.
+; If set to 0, polling will be disabled.
+;poll_interval = 3
+
+; Available tags:
+;   <label-charging> (default)
+;   <bar-capaity>
+;   <ramp-capacity>
+;   <animation-charging>
+format-charging = <label-charging>
+format-charging-padding = 1
+format-charging-foreground = #000000
+format-charging-background = #ccc7c7c7
+
+; Available tags:
+;   <label-discharging> (default)
+;   <bar-capaity>
+;   <ramp-capacity>
+format-discharging = <label-discharging>
+format-discharging-padding = 1
+format-discharging-background = #aa000000
+format-full-background = #aa000000
+format-full-padding = 1
+
+; Available tags:
+;   <label-full> (default)
+;   <bar-capaity>
+;   <ramp-capacity>
+format-full = <label-full>
+
+; Available tokens:
+;   %percentage% (default)
+label-charging = chrg %percentage%
+
+; Available tokens:
+;   %percentage% (default)
+label-discharging = batt %percentage%
+
+; Available tokens:
+;   %percentage% (default)
+label-full = batt %percentage%
+
+ramp-capacity-0 = 
+ramp-capacity-1 = 
+ramp-capacity-2 = 
+ramp-capacity-3 = 
+ramp-capacity-4 = 
+
+bar-capacity-width = 10
+
+animation-charging-0 = 
+animation-charging-1 = 
+animation-charging-2 = 
+animation-charging-3 = 
+animation-charging-4 = 
+animation-charging-framerate_ms = 750
+
+[module/backlight]
+type = internal/backlight
+
+; Use the following command to list available cards:
+; $ ls -1 /sys/class/backlight/
+card = intel_backlight
+
+; Available tags:
+;   <label> (default)
+;   <ramp>
+;   <bar>
+format = <label>
+
+; Available tokens:
+;   %percentage% (default)
+label = back %percentage%
+
+format-background = #aa000000
+format-padding = 1
+
+[module/mpd]
+type = internal/mpd
+
+host = localhost
+port = 6600
+
+format-online = <label-song> <bar-progress> <label-time>
+
+label-song = %artist% - %title% (%{T2}%album%%{T1}, %year%)
+label-time = %elapsed% / %total%
+
+label-offline = mpd offline
+format-offline = <label-offline>
+format-offline-foreground = #000000
+format-offline-background = #ccc7c7c7
+format-offline-padding = 1
+
+label-song-maxlen = 110
+
+format-online-background = #aa000000
+format-online-padding = 1
+
+bar-progress-width = 40
+bar-progress-fill = ─
+bar-progress-indicator = /
+bar-progress-empty = ─
+
+[module/up-speed]
+type = internal/network
+interface = wlp1s0
+ping-interval = 3
+label-connected = %upspeed:10:10%
+label-connected-background = #aa000000
+label-connected-padding = 1
+
+[module/down-speed]
+type = internal/network
+interface = wlp1s0
+ping-interval = 3
+label-connected = %downspeed:10:10%
+label-connected-background = #aa000000
+label-connected-padding = 1
