--- a/qutebrowser/qsettings/QtProject.conf
+++ b/qutebrowser/qsettings/QtProject.conf
@@ -1,6 +1,6 @@
 [FileDialog]
-history=file:///root
-lastVisited=file:///root
+history=file:///root, file:///home/coc/Downloads
+lastVisited=file:///home/coc/Downloads
 qtVersion=5.9.1
 shortcuts=file:, file:///root
 sidebarWidth=90
