--- a/Trolltech.conf
+++ b/Trolltech.conf
@@ -7,6 +7,8 @@ usr\lib\qt4\plugins\imageformats\libqjpeg.so=40807, 0, x86_64 linux g++-4 full-c
 usr\lib\qt4\plugins\imageformats\libqmng.so=40807, 0, x86_64 linux g++-4 full-config, 2017-07-10T22:22:32
 usr\lib\qt4\plugins\imageformats\libqsvg.so=40807, 0, x86_64 linux g++-4 full-config, 2017-07-10T22:22:32
 usr\lib\qt4\plugins\imageformats\libqtiff.so=40807, 0, x86_64 linux g++-4 full-config, 2017-07-10T22:22:32
+opt\pt\bin\imageformats\libqgif.so=40802, 0, i386 linux g++-4 full-config, 2017-09-27T17:37:14
+opt\pt\bin\imageformats\libqjpeg.so=40802, 0, i386 linux g++-4 full-config, 2017-09-27T17:37:14
 
 [Qt%20Factory%20Cache%204.8]
 com.trolltech.Qt.QInputContextFactoryInterface%3A\usr\lib\qt4\plugins\inputmethods\libqimsw-multi.so=2017-07-10T22:22:32, imsw-multi
@@ -18,6 +20,8 @@ com.trolltech.Qt.QImageIOHandlerFactoryInterface%3A\usr\lib\qt4\plugins\imagefor
 com.trolltech.Qt.QImageIOHandlerFactoryInterface%3A\usr\lib\qt4\plugins\imageformats\libqmng.so=2017-07-10T22:22:32, mng
 com.trolltech.Qt.QImageIOHandlerFactoryInterface%3A\usr\lib\qt4\plugins\imageformats\libqsvg.so=2017-07-10T22:22:32, svg, svgz
 com.trolltech.Qt.QImageIOHandlerFactoryInterface%3A\usr\lib\qt4\plugins\imageformats\libqtiff.so=2017-07-10T22:22:32, tiff, tif
+com.trolltech.Qt.QImageIOHandlerFactoryInterface%3A\opt\pt\bin\imageformats\libqgif.so=2017-09-27T17:37:14, gif
+com.trolltech.Qt.QImageIOHandlerFactoryInterface%3A\opt\pt\bin\imageformats\libqjpeg.so=2017-09-27T17:37:14, jpeg, jpg
 
 [Qt]
-filedialog=@ByteArray(\0\0\0\xbe\0\0\0\x3\0\0\0\x1e\0\0\0\xff\0\0\0\0\0\0\0\x2\0\0\0^\0\0\xe\0\x1\0\0\0\x4\x1\0\0\0\x1\0\0\0\x2\0\0\0\x5\x66ile:\0\0\0\ffile:///root\0\0\0\x2\0\0\0\xe\0/\0m\0n\0t\0/\0O\0S\0\0\0\n\0/\0r\0o\0o\0t\0\0\0\xe\0/\0m\0n\0t\0/\0O\0S\0\0\0~\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x1\xf2\0\0\0\x4\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x4\0\0\x1\x2\0\0\0\x1\0\0\0\0\0\0\0@\0\0\0\x1\0\0\0\0\0\0\0\x41\0\0\0\x1\0\0\0\0\0\0\0o\0\0\0\x1\0\0\0\0\0\0\0\x1)
+filedialog=@ByteArray(\0\0\0\xbe\0\0\0\x3\0\0\0\x1e\0\0\0\xff\0\0\0\0\0\0\0\x2\0\0\0^\0\0\xe\0\x1\0\0\0\x4\x1\0\0\0\x1\0\0\0\x2\0\0\0\x5\x66ile:\0\0\0\ffile:///root\0\0\0\x4\0\0\0\xe\0/\0m\0n\0t\0/\0O\0S\0\0\0\n\0/\0r\0o\0o\0t\0\0\0&\0/\0h\0o\0m\0\x65\0/\0\x63\0o\0\x63\0/\0\x44\0o\0w\0n\0l\0o\0\x61\0\x64\0s\0\0\0$\0/\0h\0o\0m\0\x65\0/\0\x63\0o\0\x63\0/\0p\0t\0/\0s\0\x61\0v\0\x65\0s\0\0\0$\0/\0h\0o\0m\0\x65\0/\0\x63\0o\0\x63\0/\0p\0t\0/\0s\0\x61\0v\0\x65\0s\0\0\0~\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x1\xf2\0\0\0\x4\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x4\0\0\x1\x2\0\0\0\x1\0\0\0\0\0\0\0@\0\0\0\x1\0\0\0\0\0\0\0\x41\0\0\0\x1\0\0\0\0\0\0\0o\0\0\0\x1\0\0\0\0\0\0\0\x1)
