--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -438,7 +438,7 @@ map ct search_next order=tag
 map cs search_next order=size
 map ci search_next order=mimetype
 # map cc search_next order=ctime
-map cm search_next order=mtime
+# map cm search_next order=mtime
 map ca search_next order=atime
 
 # Tabs
