--- a/Genymobile/Genymotion.conf
+++ b/Genymobile/Genymotion.conf
@@ -1,2 +1,6 @@
 [General]
+eula-id.agreed=-1
+host.only.interface=vboxnet0
+onboarding.popup.shown=true
 stats.installation.date=1505783096
+whats.new.popup.last.version=2.10.0
