--- a/QtProject.conf
+++ b/QtProject.conf
@@ -1,8 +1,8 @@
 [FileDialog]
-history=file:///root, file:///home/coc/Downloads, file:///home/coc
-lastVisited=file:///home/coc
-qtVersion=5.9.1
-shortcuts=file:, file:///root
+history=file:///mnt/os/VM/archVM/arch, file:///mnt/os/VM/archOld/arch, file:///home/coc/Documents, file:///mnt/os/VM/archVM/arch/Logs, file:///mnt/os/VM
+lastVisited=file:///mnt/os/VM/archVM/arch
+qtVersion=5.9.2
+shortcuts=file:, file:///home/coc
 sidebarWidth=90
 treeViewHeader=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x1\xec\0\0\0\x4\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x4\0\0\0\xff\0\0\0\x1\0\0\0\0\0\0\0?\0\0\0\x1\0\0\0\0\0\0\0@\0\0\0\x1\0\0\0\0\0\0\0n\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\xff\xff\xff\xff)
 viewMode=Detail
