--- a/i3/config
+++ b/i3/config
@@ -28,10 +28,10 @@ exec_always 			exec bash ~/.config/polybar/launch.sh
 
 
 bindsym $mod+Return 		exec $term
-bindsym $mod+Shift+Return 	exec $term -e tmux
+bindsym $mod+Shift+Return	exec $term -e set -o vi
 
 bindsym $mod+Shift+space 	floating toggle
-bindsym $mod+space		focus mode_toggle
+#bindsym $mod+space		focus mode_toggle
 
 bindsym $mod+Escape		exec --no-startup-id xset -display :0.0 dpms force off
 bindsym $mod+Shift+Escape 	exec i3-msg exit
