--- a/polybar/config
+++ b/polybar/config
@@ -16,9 +16,9 @@ monitor = ${env:MONITOR:LVDS1}
 top = true
 width = 100%
 height = 15
-offset-x = 0
-offset-y = 0
-radius = 0.0
+offset-x = 10
+offset-y = 10
+radius = 0.0 
 fixed-center = true
 
 background = ${colors.background}
@@ -39,14 +39,15 @@ font-2 = FontAwesome:fontformat=truetype:size=9;1
 
 modules-left = i3 
 modules-center = xwindow
-modules-right = volume battery wireless-network vpn memory temperature date
+modules-right = volume memory battery wireless-network vpn date
 
 tray-position = right
-tray-padding = 5
+tray-padding = 15
 tray-offset-y = 0%
-tray-offset-x = 0%
+tray-offset-x = 10%
 tray-maxsize = 18
 tray-detached = true
+/*tray-transparent = true*/
 tray-transparent = false
 tray-color = #1D1F21
 
@@ -90,9 +91,9 @@ interval = 5
 
 format = <label>
 format-prefix-foreground = ${colors.foreground}
-format-underline = ${colors.colour_1}
+/* format-underline = ${colors.colour_1} */
 
-label = %date%, %time%
+label = %time% | %date% 
 
 date = "%d/%m"
 date-alt = "%a %B %d"
