--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -362,7 +362,7 @@ map )     jump_non
 
 map cg cd ~
 map ch cd ~/Dropbox/hk171
-map cc cd ~/Dropbox/hk171/congnghe
+map cs cd ~/Dropbox/hk171/soft_tech
 map cp cd ~/Dropbox/hk171/ppl
 map cn cd ~/Dropbox/hk171/network
 map cd cd ~/Dropbox/hk171/database
@@ -434,9 +434,9 @@ map yk  eval fm.copy(dirarg=dict(up=1), narg=quantifier)
 map /  console search%space
 map n  search_next
 map N  search_next forward=False
-map ct search_next order=tag
-map cs search_next order=size
-map ci search_next order=mimetype
+map st search_next order=tag
+map ss search_next order=size
+map si search_next order=mimetype
 # map cc search_next order=ctime
 # map cm search_next order=mtime
 map ca search_next order=atime
