--- a/polybar/config
+++ b/polybar/config
@@ -191,7 +191,7 @@ format-connected =  <label-connected>
 format-connected-foreground = ${colors.colour_1}
 format-disconnected = <label-disconnected>
 
-label-connected = %essid%  %local_ip%
+/*label-connected = %essid%  %local_ip%*/
 label-connected-foreground = ${colors.foreground}
 
 label-disconnected = (None)
