--- a/qutebrowser/qutebrowser.conf
+++ b/qutebrowser/qutebrowser.conf
@@ -39,7 +39,7 @@ ignore-case = smart
 # startpage (List of String):
 #     The default page(s) to open at the start, separated by commas.
 #     Default: https://start.duckduckgo.com
-startpage = https://google.co.uk/
+startpage = https://www.google.co.uk/
 
 # yank-ignored-url-parameters (List of String):
 #     The URL parameters to strip with :yank url, separated by commas.
@@ -735,7 +735,7 @@ indicator-padding = 2,2,0,4
 #     The directory to save downloads to. An empty value selects a
 #     sensible os-specific default. Will expand environment variables.
 #     Default:
-download-directory = 
+download-directory = /root/Dropbox/hk171/
 
 # prompt-download-directory (Bool):
 #     Whether to prompt the user for the download location.
