--- a/i3/config
+++ b/i3/config
@@ -6,6 +6,7 @@ gaps outer 5
 set $mod Mod4
 floating_modifier $mod
 set $term termite
+#set $term urxvt
 exec --no-startup-id xcompmgr
 set $browser firefox
 set $screencast  ffmpeg -y -f x11grab -video_size 1280x800 -i :0.0 -f alsa -i default -c:v ffvhuff -r 30 -c:a flac output.mkv
