--- a/i3status/config
+++ b/i3status/config
@@ -5,17 +5,17 @@ general {
 }
 
 order += "volume master"
-order += "ipv6"
+order += "battery 0"
+order += "tztime local"
+# order += "ipv6"
 # order += "disk /"
 # order += "run_watch DHCP"
 # order += "run_watch VPNC"
 # order += "path_exists VPN"
 # order += "wireless wlan0"
-order += "ethernet eth0"
-order += "battery 0"
+# order += "ethernet eth0"
 # order += "cpu_temperature 0"
-order += "load"
-order += "tztime local"
+# order += "load"
 # order += "tztime berlin"
 
 
@@ -31,12 +31,13 @@ ethernet eth0 {
 }
 
 battery 0 {
-        format = "%status %percentage %remaining %emptytime"
+        # format = "%status %percentage %remaining %emptytime"
+        format = "%status %percentage"
         format_down = "No battery"
         status_chr = "⚡ CHR"
         status_bat = " BAT"
         status_unk = "? UNK"
-        status_full = "☻ FULL"
+        status_full = "☻"
         path = "/sys/class/power_supply/BAT%d/uevent"
         low_threshold = 10
 }
@@ -57,7 +58,7 @@ path_exists VPN {
 
 tztime local {
         # format = "%Y-%m-%d %H:%M:%S"
-        format = "_%d_%H:%M"
+        format = "%H:%M  %d"
 }
 
 tztime berlin {
