--- a/qalculate/qalc.cfg
+++ b/qalculate/qalc.cfg
@@ -1,6 +1,6 @@
 
 [General]
-version=2.0.0
+version=2.2.1
 save_mode_on_exit=1
 save_definitions_on_exit=1
 auto_update_exchange_rates=-1
@@ -12,6 +12,7 @@ lower_case_numbers=0
 lower_case_e=0
 base_display=1
 spell_out_logical_operators=1
+digit_grouping=0
 dot_as_separator=0
 comma_as_separator=0
 multiplication_sign=0
@@ -23,6 +24,8 @@ use_min_deci=0
 max_deci=2
 use_max_deci=0
 precision=8
+interval_arithmetic=0
+interval_display=0
 min_exp=-1
 negative_exponents=0
 sort_minus_last=1
@@ -47,6 +50,7 @@ functions_enabled=1
 variables_enabled=1
 calculate_variables=1
 calculate_functions=1
+variable_units_enabled=1
 sync_units=1
 unknownvariables_enabled=0
 units_enabled=1
