--- a/qalculate/qalculate-gtk.cfg
+++ b/qalculate/qalculate-gtk.cfg
@@ -1,31 +1,30 @@
 
 [General]
-version=1.0.0
+version=2.2.1
 allow_multiple_instances=0
-width=672
-height=731
+width=666
 error_info_shown=0
 save_mode_on_exit=1
 save_definitions_on_exit=1
 load_global_definitions=1
 auto_update_exchange_rates=-1
-wget_args=--quiet --tries=1
 show_keypad=1
-keypad_height=504
 show_history=0
 history_height=300
 show_stack=1
 show_convert=0
 continuous_conversion=1
 set_missing_prefixes=0
-rpn_keypad_only=1
+rpn_keys=1
 display_expression_status=1
 enable_completion=1
 use_unicode_signs=1
 lower_case_numbers=0
+e_notation=0
 lower_case_e=0
 base_display=1
 spell_out_logical_operators=1
+digit_grouping=1
 dot_as_separator=0
 comma_as_separator=0
 use_custom_result_font=0
@@ -34,11 +33,20 @@ use_custom_status_font=0
 custom_result_font=Cantarell 11
 custom_expression_font=Cantarell 11
 custom_status_font=Cantarell 11
-multiplication_sign=1
+multiplication_sign=2
 division_sign=1
+expression_history=cos(15$ to VND)
+expression_history=15$ to VND
+history_expression=cos(15$ to VND)
+history_parse=cos((15 × dollar) × radian)
+history_result=cos(15 $×rad)
+history_expression=15$ to VND
+history_parse=15 × dollar
+history_result_approximate=VND 340 410
 recent_functions=
 recent_variables=
 recent_units=
+latest_button_currency=USD
 
 [Mode]
 min_deci=0
@@ -46,6 +54,8 @@ use_min_deci=0
 max_deci=2
 use_max_deci=0
 precision=8
+interval_arithmetic=1
+interval_display=0
 min_exp=-1
 negative_exponents=0
 sort_minus_last=1
@@ -64,12 +74,13 @@ number_base_expression=10
 read_precision=0
 assume_denominators_nonzero=1
 warn_about_denominators_assumed_nonzero=1
-structuring=3
+structuring=1
 angle_unit=1
 functions_enabled=1
 variables_enabled=1
 calculate_functions=1
 calculate_variables=1
+variable_units_enabled=1
 sync_units=1
 unknownvariables_enabled=0
 units_enabled=1
