--- a/i3/config
+++ b/i3/config
@@ -25,7 +25,7 @@ exec --no-startup-id nm-applet
  }
 
 # exec_always 			exec bash ~/.config/polybar/launch.sh
-exec_always 			    exec setxkbmap -option 
+# exec_always 			    exec setxkbmap -option 
 exec_always                 xmodmap ~/.config/.Xmodmap
 
 
