--- a/stardict/stardict.cfg
+++ b/stardict/stardict.cfg
@@ -11,9 +11,25 @@ dict_default_group=Default Group
 
 [/apps/stardict/preferences/floating_window]
 max_window_height=320
-use_custom_bg=true
+use_custom_bg=false
+
+pronounce_when_popup=true
 
 [/apps/stardict/preferences/main_window]
 window_width=666
 window_height=725
 hpaned_pos=134
+
+[/apps/stardict/preferences/dictionary]
+use_tts_program=false
+tts_program_cmdline=espeak %s &
+enable_sound_event=true
+tts_path=/usr/share/stardict/dic/WyabdcRealPeopleTTS/usr/share/WyabdcRealPeopleTTS
+use_custom_font=false
+custom_font=DejaVu Sans Mono 10
+bookname_style=1
+markup_search_word=true
+sound_play_command=aplay
+scan_selection=true
+only_export_word=false
+export_file=/tmp/dic.txt
