--- a/i3/config
+++ b/i3/config
@@ -198,7 +198,9 @@ bindsym $mod4+0 exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
 
 # Sreen brightness controls
 bindsym XF86MonBrightnessUp exec xbacklight -inc 20 # increase screen brightness
+bindsym $mod4+Up exec xbacklight -inc 20 # increase screen brightness
 bindsym XF86MonBrightnessDown exec xbacklight -dec 20 # decrease screen brightness
+bindsym $mod4+Down exec xbacklight -dec 20 # decrease screen brightness
 
 # Touchpad controls
 # Rotate
